# SugarInput

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
lib/: Constants.h  IOException.cpp  IOException.h  IOStreamReader.h  IOStreamable.h  Parser.cpp  Parser.h  Reader.cpp  Reader.h  library.cpp
lib/Datatypes/: Container.h  Email.cpp  Email.h  Name.cpp  Name.h  PhoneNumber.cpp  PhoneNumber.h  Vector.h
lib/impl/: m_IOStreamReader.cpp  m_IOStreamReader.h
tests/: basic_io_test.cpp  bool_tests.cpp  char_test.cpp  custom_data_types.cpp  double_test.cpp  error_test.cpp  float_test.cpp  int32_tests.cpp  int64_test.cpp  integration_skipInvalidInput.cpp  parser_test.h  specialized_parser_test.cpp  string_test.cpp  uint32_tests.cpp  uint64_test.cpp  vector_test.cpp
